<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MTS Notify</string>
    <string name="parse_app_id">kMPUDDkrcGmKF256qJhEf3VMGLmY97SKTm0ps8Ji</string>
    <string name="parse_client_key">OKxJprdkucIfan7TyoC9jP79gJd6T4U0Svf9sffA</string>
    <string name="profile_logo_content_description">Logo</string>
    <string name="profile_title_logged_in">Your are logged in as</string>
    <string name="profile_logout_button_label">Log out</string>
    <string name="profile_title_logged_out">You must be logged in to view your profile</string>
    <string name="profile_login_button_label">Log in</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_login_signup">MTS Notify</string>
    <string name="title_activity_dashboard">MTS Notify</string>
    <string name="title_section1">Notifications</string>
    <string name="title_section2">News</string>
    <string name="title_section3">Calendar</string>
    <string name="title_activity_about">About</string>
    <string name="action_about">About</string>
    <string name="text_placeholder">placeholder</string>
    <string name="label_createdat">createdAt</string>
    <string name="label_message">message</string>
    <string name="label_subject">subject</string>
    <string name="label_version">Version info</string>
    <string name="label_release">Release Date</string>
    <string name="label_update">Update Date</string>
    <string name="label_company">Company Name</string>
    <string name="label_description">App Description</string>
    <string name="title_activity_profile">Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_profile">Profile </string>
    <string name="title_activity_custom_login"></string>
    <string name="title_activity_feedback">Feedback </string>
    <string name="action_feedback">Feedback</string>
    <string name="action_settings">Settings</string>
    <string name="label_feedback"> We continiously review user requests so that our ongoing software improvements are influenced by your great suggestions.</string>
    <string name="feedback_hint">Feedback, comments, feature fequests:</string>
    <string name="hint_email">Email Address</string>
    <string name="checkbox_email">Please contact me via email</string>
    <string name="button_submit">Submit</string>
    <string name="about_label_description">Member Tracking System Notify is designed to increase the involvement of the parent with their child or children\'s Boys and Girls Club or other Before/After-School Care Facility.</string>
    <string name="about_label_company">Vision Computer Programming Services, Inc.</string>
    <string name="about_label_version">Version 2.0.4</string>
    <string name="about_label_release">Released: 01-05-2015</string>
    <string name="about_label_update">Updated: 01-06-2015</string>
    <string name="title_activity_splash"></string>
    <string name="title_activity_notification_history">Notification Archive </string>
    <string name="action_notification_history">Notification Archive </string>
    <string name="button_edit">Edit</string>
    <string name="title_activity_edit_profile"></string>
    

</resources>
