<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vcps.notify.FeedbackActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/about_label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/label_feedback"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/input_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about_label_description"
        android:layout_alignRight="@+id/about_label_description"
        android:layout_below="@+id/about_label_description"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/feedback_hint"
        android:inputType="textMultiLine"
        android:maxLength="@integer/feedback_length_edittext" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/input_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_feedback"
        android:layout_below="@+id/input_feedback"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <CheckBox
        android:id="@+id/checkbox_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_email"
        android:layout_below="@+id/input_email"
        android:hint="@string/checkbox_email" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/button_submit" />

</RelativeLayout>
