<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/label_createdAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_createdat"
        android:textSize="@dimen/text_createdAt_size" />

     <TextView
         android:id="@+id/label_subject"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/label_createdAt"
         android:text="@string/label_subject"
         android:textSize="@dimen/text_subject_size" />

     <TextView
         android:id="@+id/label_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/label_subject"
         android:layout_marginLeft="26dp"
         android:text="@string/label_message"
         android:textSize="@dimen/text_message_size" />

</RelativeLayout>
